2006-09-19  Werner Koch  <wk@g10code.com>

	* Makefile.am (online): New target.

2006-08-29  Werner Koch  <wk@g10code.com>

	* gcrypt.texi (Available ciphers): Add missing ciphers.

2006-03-10  Brad Hards  <bradh@frogmouth.net> (wk, patch 2005-04-25)

	* gcrypt.texi: Document SHA-224 and typo fixes.

2006-01-18  Brad Hards  <bradh@frogmouth.net> (wk 2006-03-07)

	* gcrypt.texi (Available cipher modes): Typo fix, add a little
	more detail on cipher modes vs cipher algorithms.

2006-01-08  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.texi: Added documentation for more gcry_control commands.

	* gcrypt.texi: Fixed several typos; thanks to Tommi Vainikainen.

2005-12-16  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.texi (MPI formats): Fix return types of functions:
	gcry_mpi_scan, gcry_mpi_print, gcry_mpi_aprint.

2005-11-26  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.texi: New chapter: Prime numbers.

2005-11-12  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.texi (MPI formats): Document that for gcry_mpi_scan and
	in the case of GCRYMPI_FMT_HEX, BUFLEN must be zero.

2005-10-31  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.texi: Added more gcry_control related descriptions.

2005-10-16  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.texi (Controlling the library): Start documenting the
	existing control commands.

2005-04-11  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.texi (Available hash algorithms): Add entry for Whirlpool.

2005-03-30  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.texi (Working with IO objects): Document ac io objects;
	adjust ac scheme functions, which do now use io objects.

2005-03-19  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.texi (Working with cipher handles): Clarify CTS mode.

2005-02-08  Werner Koch  <wk@g10code.com>

	* gcrypt.texi: Fixed direntry.

2005-02-13  Moritz Schulte  <moritz@g10code.com>

	* gcrypt.texi (Using cryptographic functions): Document new
	encoding and scheme crypto functionality.
