@@ -1,3 +1,7 @@
+2006-11-05  Moritz Schulte  <moritz@g10code.com>
+
+	* gcrypt.texi (General public-key related Functions): Typo.
+
 2006-09-19  Werner Koch  <wk@g10code.com>
 
 	* Makefile.am (online): New target.
